feat: add update user handlers
